RESOLVED FIXED89507
[BlackBerry] Missing notifyContentRendered() when resuming rendering
https://bugs.webkit.org/show_bug.cgi?id=89507
Summary [BlackBerry] Missing notifyContentRendered() when resuming rendering
Jakob Petsovits
Reported 2012-06-19 13:33:04 PDT
If rendering without a backing store, we're forgetting to issue a notifyContentRendered() call because the forced rerendering in resumeBackingStore() doesn't go through the RenderQueue where all other calls to notifyContentRendered() currently sit. The patch below fixes this by adding a notification where it's necessary.
Attachments
Patch (1.80 KB, patch)
2012-06-19 13:38 PDT, Jakob Petsovits
no flags
Jakob Petsovits
Comment 1 2012-06-19 13:38:35 PDT
WebKit Review Bot
Comment 2 2012-06-19 15:48:19 PDT
Comment on attachment 148407 [details] Patch Clearing flags on attachment: 148407 Committed r120763: <http://trac.webkit.org/changeset/120763>
WebKit Review Bot
Comment 3 2012-06-19 15:48:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.