[BlackBerry] Missing notifyContentRendered() when resuming rendering https://bugs.webkit.org/show_bug.cgi?id=89507 RIM PR 150049

Reviewed by Antonio Gomes.

All the current calls to notifyContentRendered() are
located in the RenderQueue, but this omits the case
when we force rendering from resumeBackingStore()
after rendering had been suspended for a while.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::resumeBackingStore):


Canonical link: https://commits.webkit.org/107368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120763 268f45cc-cd09-0410-ab3c-d52691b4dbfc